feature/button:hover
Убран outline с input
hover на кнопки

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -16,8 +16,10 @@
         autocomplete="off" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="000-000-00-00" />
       <label class="form-label" for="phone">Phone*</label>
     </div>
-
-    <button type="submit" class="button">i want a free lesson</button>
+    <div class="btn-wrapper">
+      <span class="button-text-mask">i want a free lesson</span>
+      <button type="submit" class="button">i want a free lesson</button>
+    </div>
   </form>
 
 </section>
