--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,58 +1,52 @@
 <section class="hero">
-   <div class="container hero-container">
-      <div class="hero-content">
-        <div class="hero-text-block _anim-items _anim-no-hide">
-             <h1 class="hero-title ">
-                Complex preparation for English UPE
-             </h1>
-             <p class="hero-text">It won’t be easy.</p>
-             <b class="hero-guarantee">
-                But you’re guaranteed to get <br>
-                <span class="hero-guarantee-accent">+25 points</span>
-             </b>
-        </div>
-         <a class="button hero-button link _anim-items _anim-no-hide" href="#registration">i want a free lesson</ф>
+  <div class="container hero-container">
+    <div class="hero-content">
+      <div class="hero-text-block _anim-items _anim-no-hide">
+        <h1 class="hero-title ">
+          Complex preparation for English UPE
+        </h1>
+        <p class="hero-text">It won’t be easy.</p>
+        <b class="hero-guarantee">
+          But you’re guaranteed to get <br>
+          <span class="hero-guarantee-accent">+25 points</span>
+        </b>
       </div>
-      
-      <div class="hero-wrapper _anim-items _anim-no-hide">
-         <picture>
-            <source srcset="
+      <div class="btn-wrapper">
+        <span class="button-text-mask color-hover-hero">i want a free lesson</span>
+        <a class="button hero-button link _anim-items _anim-no-hide" href="#registration">i want
+          a free lesson</a>
+      </div>
+    </div>
+
+    <div class="hero-wrapper _anim-items _anim-no-hide">
+      <picture>
+        <source srcset="
                 ./images/content/desktop/hero-img-desk.webp 1x,
                 ./images/content/desktop/hero-img-desk@2x.webp 2x
-                " 
-                type="image/webp" 
-                media="(min-width: 769px)" />
-            <source srcset="
+                " type="image/webp" media="(min-width: 769px)" />
+        <source srcset="
                 ./images/content/desktop/hero-img-desk.png 1x,
-                ./images/content/desktop/hero-img-desk@2x.png 2x" 
-                media="(min-width: 769px)" />
+                ./images/content/desktop/hero-img-desk@2x.png 2x" media="(min-width: 769px)" />
 
-            <source srcset="
+        <source srcset="
                 ./images/content/tablet/hero-img-tab.webp 1x,
                 ./images/content/tablet/hero-img-tab@2x.webp 2x
-                " 
-                type="image/webp" 
-                media="(min-width: 481px)" />
-            <source srcset="
+                " type="image/webp" media="(min-width: 481px)" />
+        <source srcset="
                 ./images/content/tablet/hero-img-tab.png 1x,
-                ./images/content/tablet/hero-img-tab@2x.png 2x" 
-                media="(min-width: 481px)" />
+                ./images/content/tablet/hero-img-tab@2x.png 2x" media="(min-width: 481px)" />
 
-            <source srcset="
+        <source srcset="
                 ./images/content/mobile/hero-img-mob.webp 1x,
                 ./images/content/mobile/hero-img-mob@2x.webp 2x
-                " 
-                type="image/webp" 
-                media="(max-width: 480px)" />
-            <source srcset="
+                " type="image/webp" media="(max-width: 480px)" />
+        <source srcset="
                 ./images/content/mobile/hero-img-mob.png 1x,
-                ./images/content/mobile/hero-img-mob@2x.png 2x" 
-                media="(max-width: 480px)" />
+                ./images/content/mobile/hero-img-mob@2x.png 2x" media="(max-width: 480px)" />
 
-            <img class="hero-background" src="#" alt="преподаватель общается со студентами" 
-            />
-      </div>
-   </div>
-  
+        <img class="hero-background" src="#" alt="преподаватель общается со студентами" />
+    </div>
+  </div>
+
 
 </section>
