--- a/src/sass/utils/_vars.scss
+++ b/src/sass/utils/_vars.scss
@@ -5,6 +5,7 @@ $primary-white-color: #ffffff;
 $primary-black-color: #111518;
 $primary-text-color: #b9b9b9;
 $secondary-text-color: #3d3d3d;
+$secondary-bg-color: #f1f1f1;
 $backdrop: rgba(17, 21, 24, 0.9);
 
 //shadows
