add scroll to anchors

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,11 +13,11 @@
       </a>
       <ul class="header-nav-list list">
         <li class="header-nav-item">
-          <a class="header-nav-link current" href="#">studing program</a>
+          <a class="header-nav-link current" href="#program">studing program</a>
         </li>
-        <li class="header-nav-item"><a class="header-nav-link" href="#">about</a></li>
-        <li class="header-nav-item"><a class="header-nav-link" href="#">training options</a></li>
-        <li class="header-nav-item"><a class="header-nav-link" href="#">contacts</a></li>
+        <li class="header-nav-item"><a class="header-nav-link" href="#about">about</a></li>
+        <li class="header-nav-item"><a class="header-nav-link" href="#how-we-do">training options</a></li>
+        <li class="header-nav-item"><a class="header-nav-link" href="#registration">contacts</a></li>
       </ul>
     </nav>
     <div class="header-btn-container">
