--- a/src/partials/how-we-do.html
+++ b/src/partials/how-we-do.html
@@ -1,4 +1,4 @@
-<section class="how-we-do">
+<section class="how-we-do" id="how-we-do">
     <div class="how-we-do-container container">
         <h2 class="how-we-do-title title black-title">How do we do it</h2>
         <!-- <div class="how-we-do-list-block"> -->
