semantic fix in lofo + anchors in mobile menu

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,7 +8,7 @@
                     <use href="../src/images/icons/sprite.svg#icon-fire"></use>
                 </svg>
                 EN
-            </span> <span class="logo-text-accent"> HELLISH </span> ENGLISH
+            </span> <span class="logo-text-accent"> hellish </span> english
         </a>
     </div>
     <div class="footer-contacts">
