--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,7 +9,7 @@
           </svg>
           EN
         </span>
-        <span class="logo-text-accent"> HELLISH </span> ENGLISH
+        <span class="logo-text-accent"> hellish </span> english
       </a>
       <ul class="header-nav-list list">
         <li class="header-nav-item">
@@ -42,7 +42,7 @@
           </svg>
           EN
         </span>
-        <span class="logo-text-accent"> HELLISH </span> ENGLISH
+        <span class="logo-text-accent"> hellish </span> english
       </a>
       <button type="button" class="mobile-close-button" data-menu-close>
         <svg class="mobile-close-icon" width="15" height="15">
@@ -53,11 +53,11 @@
     <div>
       <ul class="mobile-list list">
         <li class="mobile-item">
-          <a class="mobile-link mobilemenu-current" href="#">Studying program</a>
+          <a class="mobile-link mobilemenu-current" href="#program">Studying program</a>
         </li>
-        <li class="mobile-item"><a class="mobile-link" href="#">About</a></li>
-        <li class="mobile-item"><a class="mobile-link" href="#">Training options</a></li>
-        <li class="mobile-item"><a class="mobile-link" href="#">Contacts</a></li>
+        <li class="mobile-item"><a class="mobile-link" href="#about">About</a></li>
+        <li class="mobile-item"><a class="mobile-link" href="#how-we-do">Training options</a></li>
+        <li class="mobile-item"><a class="mobile-link" href="#registration">Contacts</a></li>
       </ul>
       <button type="button" class="mobile-order-button button" data-modal-open>
         CONSULTATION BY PHONE
