--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -27,7 +27,7 @@
                     </a>
                 </div>
                 <article class="text-box">
-                    <h3 class="commentators-name">Tonya Kucherovskaya</h3>
+                    <h3 class="commentators-name">Larisa Timoshenko</h3>
                     <p class="comment-title">Graduated from 2015, National University of Bioresources and natural history of
                         Ukraine</p>
                     <p class="comment-text">In a short time with Elena, I mastered grammar and replenished my completely empty
@@ -65,7 +65,7 @@
                     </a>
                 </div>
                 <article class="text-box">
-                    <h3 class="commentators-name">Tonya Kucherovskaya</h3>
+                    <h3 class="commentators-name">Viktor Kostiuchenko</h3>
                     <p class="comment-title">Graduated from 2015, National University of Bioresources and natural history of
                         Ukraine</p>
                     <p class="comment-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis minus cumque
@@ -101,7 +101,7 @@
                     </a>
                 </div>
                 <article class="text-box">
-                    <h3 class="commentators-name">Tonya Kucherovskaya</h3>
+                    <h3 class="commentators-name">Bronislav Voydylo</h3>
                     <p class="comment-title">Graduated from 2015, National University of Bioresources and natural history of
                         Ukraine</p>
                     <p class="comment-text">In a short time with Elena, I mastered grammar and replenished my completely empty
@@ -141,7 +141,7 @@
                     </a>
                 </div>
                 <article class="text-box">
-                    <h3 class="commentators-name">Tonya Kucherovskaya</h3>
+                    <h3 class="commentators-name">Vladislav Slobodeniuk</h3>
                     <p class="comment-title">Graduated from 2015, National University of Bioresources and natural history of
                         Ukraine</p>
                     <p class="comment-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis minus cumque
@@ -177,7 +177,7 @@
                     </a>
                 </div>
                 <article class="text-box">
-                    <h3 class="commentators-name">Tonya Kucherovskaya</h3>
+                    <h3 class="commentators-name">Saftar Aliev</h3>
                     <p class="comment-title">Graduated from 2015, National University of Bioresources and natural history of
                         Ukraine</p>
                     <p class="comment-text">In a short time with Elena, I mastered grammar and replenished my completely empty
@@ -217,7 +217,7 @@
                     </a>
                 </div>
                 <article class="text-box">
-                    <h3 class="commentators-name">Tonya Kucherovskaya</h3>
+                    <h3 class="commentators-name">Bohdan Tatarchuk</h3>
                     <p class="comment-title">Graduated from 2015, National University of Bioresources and natural history of
                         Ukraine</p>
                     <p class="comment-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis minus cumque
@@ -253,7 +253,7 @@
                     </a>
                 </div>
                 <article class="text-box">
-                    <h3 class="commentators-name">Tonya Kucherovskaya</h3>
+                    <h3 class="commentators-name">Andrey Kuzjmichev</h3>
                     <p class="comment-title">Graduated from 2015, National University of Bioresources and natural history of
                         Ukraine</p>
                     <p class="comment-text">In a short time with Elena, I mastered grammar and replenished my completely empty
