--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -27,7 +27,7 @@
                     </a>
                 </div>
                 <article class="text-box">
-                    <h3 class="commentators-name">Larisa Timoshenko</h3>
+                    <h3 class="commentators-name">Larysa Timoshenko</h3>
                     <p class="comment-title">Graduated from 2015, National University of Bioresources and natural history of
                         Ukraine</p>
                     <p class="comment-text">In a short time with Elena, I mastered grammar and replenished my completely empty
@@ -253,7 +253,7 @@
                     </a>
                 </div>
                 <article class="text-box">
-                    <h3 class="commentators-name">Andrey Kuzjmichev</h3>
+                    <h3 class="commentators-name">Andrey Kuzmichev</h3>
                     <p class="comment-title">Graduated from 2015, National University of Bioresources and natural history of
                         Ukraine</p>
                     <p class="comment-text">In a short time with Elena, I mastered grammar and replenished my completely empty
