bagfix/button-header

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,9 +21,12 @@
       </ul>
     </nav>
     <div class="header-btn-container">
-      <button type="button" class="header-order-button button" data-modal-open>
-        consultation by phone
-      </button>
+      <div class="wrapper-heder-btn">
+        <span class="button-text-mask btn-heder-hover">consultation by phone</span>
+        <button type="button" class="header-order-button button" data-modal-open>
+          consultation by phone
+        </button>
+      </div>
       <button type="button" class="header-mobile-button" data-menu-button>
         <svg class="header-burger-icon">
           <use href="../src/images/icons/sprite.svg#header-burger"></use>
