--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -84,6 +84,7 @@
     top: 50%;
     transform: translateY(-50%);
     width: 100%;
+    // height: 100%;
     font-weight: 700;
     white-space: nowrap;
     text-transform: uppercase;
@@ -91,6 +92,9 @@
     letter-spacing: 0.08em;
     color: $primary-white-color;
     overflow: hidden;
+    @media screen and (max-width: 767px) {
+        display: none;
+    }
     @media screen and (min-width: 1366px) {
         padding: 25px 2px;
         font-size: 14px;
@@ -101,6 +105,13 @@
 .color-hover-hero {
     text-align: center;
     color: $accent-color;
+}
+
+.btn-heder-hover {
+    text-align: center;
+    color: $accent-color;
+    font-size: 14px;
+    letter-spacing: 0.14em;
 }
 
 .button-heder {
