Add benefits animation

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -2,7 +2,7 @@
     <div class="container">
         <h2 class="about-title title">Teacher</h2>
         <div class="about-tab">
-            <picture class="about-picture">
+            <picture>
                 <source
                     srcset="./images/content/desktop/about-desk.webp 1x, ./images/content/desktop/about-desk@2x.webp 2x"
                     type="image/webp" media="(min-width: 1366px)">
@@ -22,7 +22,7 @@
                 <img class="about-picture" src="#" alt="Преподаватель Елена Морева Teacher  Elena Moreva">
             </picture>
 
-            <div class="about-tumb">
+            <div class="about-tumb _anim-items _anim-no-hide">
                 <h3 class="about-name title">Elena Moreva</h3>
                 <ul class="about-list list">
                     <li class="about-item">
