--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,8 +1,8 @@
 <section class="benefits">
-  <div class="benefits-container container">
+  <div class="benefits-container container _anim-items _anim-no-hide">
     <h2 class="benefits-title">Why do people choose us</h2>
     <div class="benefits-list-block">
-      <ol class="benefits-list list">
+      <ol class="benefits-list list _anim-items _anim-no-hide">
         <li class="benefits-item">Training in small groups</li>
         <li class="benefits-item">Rendered notes</li>
         <li class="benefits-item">Each lesson has a goal and a specific result</li>
