--- a/src/partials/guarantee.html
+++ b/src/partials/guarantee.html
@@ -2,7 +2,7 @@
 <section class="guar">
     <div class="container">
         <h2 class="guar-titel black-title title">We guarantee</h2>
-        <ul class="guar-list list">
+        <ul class="guar-list list _anim-items _anim-no-hide">
             <li class="guar-item black-title">You will pass the UPE with at least 25 points better than on the first practice test. Otherwise, we will refund your
                 money.<span class="guar-text-accent">*</span>
             </li>
