--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -11,14 +11,14 @@
           <span class="hero-guarantee-accent">+25 points</span>
         </b>
       </div>
-      <div class="btn-wrapper">
+      <div class="btn-wrapper hero-button-wrapper _anim-items _anim-no-hide">
         <span class="button-text-mask color-hover-hero">i want a free lesson</span>
-        <a class="button hero-button link _anim-items _anim-no-hide" href="#registration">i want
+        <a class="button hero-button link" href="#registration">i want
           a free lesson</a>
       </div>
     </div>
 
-    <div class="hero-wrapper _anim-items _anim-no-hide">
+    <div class="hero-image-thumb _anim-items _anim-no-hide">
       <picture>
         <source srcset="
                 ./images/content/desktop/hero-img-desk.webp 1x,
@@ -44,7 +44,7 @@
                 ./images/content/mobile/hero-img-mob.png 1x,
                 ./images/content/mobile/hero-img-mob@2x.png 2x" media="(max-width: 480px)" />
 
-        <img class="hero-background" src="#" alt="преподаватель общается со студентами" />
+        <img class="hero-image" src="#" alt="преподаватель общается со студентами" />
     </div>
   </div>
 
