--- a/src/sass/layout/_benefits.scss
+++ b/src/sass/layout/_benefits.scss
@@ -138,3 +138,46 @@
     }
   }
 }
+
+
+.benefits-list .benefits-item {
+  transform: translateX(220%);
+  opacity: 0;
+  transition: transform 1000ms ease 0ms,
+  opacity 1000ms ease 0ms;
+}
+
+.benefits-list._active .benefits-item {
+  transform: translateX(0px);
+  opacity: 1;
+}
+
+.benefits-list._active .benefits-item:nth-child(1) {
+  transition: transform 1000ms ease 0ms,
+  opacity 1000ms ease 0ms;
+}
+
+.benefits-list._active .benefits-item:nth-child(2) {
+  transition: transform 1000ms ease 200ms,
+  opacity 1000ms ease 200ms;
+}
+
+.benefits-list._active .benefits-item:nth-child(3) {
+  transition: transform 1000ms ease 400ms,
+  opacity 1000ms ease 400ms;
+}
+
+.benefits-list._active .benefits-item:nth-child(4) {
+  transition: transform 1000ms ease 600ms,
+  opacity 1000ms ease 600ms;
+}
+
+.benefits-list._active .benefits-item:nth-child(5) {
+  transition: transform 1000ms ease 800ms,
+  opacity 1000ms ease 800ms;
+}
+
+.benefits-list._active .benefits-item:nth-child(6) {
+  transition: transform 1000ms ease 1000ms,
+  opacity 1000ms ease 1000ms;
+}
