--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -182,3 +182,14 @@
     margin-right: 30px;
   }
 }
+
+.about-tumb {
+  transform: scale(0);
+  transition: transform 1000ms ease 0ms;
+
+}
+
+.about-tumb._active {
+  transform: scale(1);
+}
+
