--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -23,9 +23,6 @@
 
   color: $primary-black-color;
 
-  opacity: 0;
-  transition: opacity 1000ms ease 0ms;
-
   @media screen and (max-width: 767px) {
     &:not(:last-child) {
       margin-bottom: 26px;
@@ -44,11 +41,6 @@
     width: calc(100% / 3);
   }
 }
-
-.advantage-list._active .advantage-item {
-  opacity: 1;
-}
-
 
 .advantage-item {
   &::before {
@@ -113,6 +105,33 @@
     padding-left: 90px;
     height: 102px;
   }
+}
+
+.advantage-list .advantage-item {
+  transform: translateY(220%);
+  opacity: 0;
+  transition: transform 1000ms ease 0ms,
+  opacity 1000ms ease 0ms;
+}
+
+.advantage-list._active .advantage-item {
+  transform: translateY(0px);
+  opacity: 1;
+}
+
+.advantage-list._active .advantage-item:nth-child(1) {
+  transition: transform 1000ms ease 0ms,
+  opacity 1000ms ease 300ms;
+}
+
+.advantage-list._active .advantage-item:nth-child(2) {
+  transition: transform 1000ms ease 300ms,
+  opacity 1000ms ease 600ms;
+}
+
+.advantage-list._active .advantage-item:nth-child(3) {
+  transition: transform 1000ms ease 600ms,
+  opacity 1000ms ease 900ms;
 }
 
 
